--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>This is the page.</h1>
-        <p> This is aparagraph</p>
+        <p>This is also a paragraph</p>
+        <p> This is a paragraph</p>
     </body>
 </html>
