--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     </head>
     <body>
         <h1>This is the page.</h1>
-        <p>This is also a paragraph</p>
-        <p> This is a paragraph</p>
+        <p> This is the paragraph</p>
     </body>
 </html>
